mã dự án - title - nội dung thay đổi: add text "HUGOSIEULUN

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
    		<div class="content">
    			<div class="hinh">
 	   			<img src="https://i.imgur.com/d5ZpZ2a.png" alt="bale">
-	   			<div class="tieude tren">
-		   			<p>an evening of contemporary</p>
+	   			<div class="tieude tren">	   				
+		   			<p>an evening of contemporary HUGOSIEULUN</p><!--062130HG mã dự án - title - nội dung thay đổi: add text "HUGOSIEULUN"-->
 		   			<p>dance</p>
 		   		</div>
 		   		<div class="tieude duoi">
